--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,6 +23,10 @@
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+MYAPP_RELEASE_STORE_FILE=your-release-key-name.keystore
+MYAPP_RELEASE_KEY_ALIAS=your-release-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=waleedkhan
+MYAPP_RELEASE_KEY_PASSWORD=waleedkhan
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
